pkl-core/src/test/files/LanguageSnippetTests/input/errors/stackTraceWithQuotedMemberName.pkl
one {
  `two three` {
    four = throw("ouch")
  }
}